# aschaves1976

./: README.md
profile-banner/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  architecture.md  design.md  pyproject.toml  requirements.txt
profile-banner/.github/: pull_request_template.md
profile-banner/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
profile-banner/.github/workflows/: validate.yml
profile-banner/assets/references/: .gitkeep
profile-banner/docs/: animation-guidelines.md  architecture.md  coding-standards.md  composition-guidelines.md  design-system.md  typography-guidelines.md  validation-report.md  visual-guidelines.md
profile-banner/tests/: __init__.py  test_build.py  test_project_structure.py  test_svg_validation.py
profile-banner/tools/: build_banner.py  clean.py  export_png.py  optimize_svg.py  preview.py  validate_structure.py  validate_svg.py  watch.py
profile-banner/tools/lib/: paths.py  project_structure.py  svg_utils.py
