[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "profile-banner"
version = "1.0.0"
description = "Professional SVG GitHub profile banner with validation and build tooling"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Alessandro Chaves" }]
keywords = ["svg", "github", "banner", "profile"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

[project.optional-dependencies]
export = ["svglib>=1.5.0", "reportlab>=4.0.0"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["tools"]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["tools"]
include = ["lib*"]
